add getHostingAccountAmounts + getDynamicEquity
